<?xml version="1.0"?>
<package>
  <name>drcsim_gazebo_ros_plugins</name>
  <version>2.8.0</version>
  <description>The drcsim_gazebo_ros_plugins package</description>
  <maintainer email="hsu@osrfoundation.org">John Hsu</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://gazebosim.org/wiki/DRC</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>drcsim_model_resources</build_depend>
  <build_depend>drcsim_gazebo_plugins</build_depend>
  <build_depend>osrf_msgs</build_depend>
  <build_depend>sandia_hand_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <!-- <build_depend>gazebo_plugins</build_depend> -->

  <run_depend>drcsim_model_resources</run_depend>
  <run_depend>drcsim_gazebo_plugins</run_depend>
  <run_depend>osrf_msgs</run_depend>
  <run_depend>sandia_hand_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <!-- <run_depend>gazebo_plugins</run_depend> -->

</package>
